# c_traceback

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy-pages.yml  pr-build.yml
examples/: CMakeLists.txt  example.c  example_inline.c  example_keyboard_interrupt.c  example_multi_error.c  example_open_file.c  example_recursion.c  example_seg_fault.c  example_stack_overflow.c
include/: c_traceback.h
include/c_traceback/: color_codes.h  error.h  error_codes.h  log_inline.h  signal_handler.h  trace.h  traceback.h
src/: CMakeLists.txt  c_traceback.c  common.h  context.c  error.c  error_codes.c  log_inline.c  signal_handler.c  traceback.c  utils.c
src/internal/: common.h  context.h  trace.h  traceback.h  utils.h
tests/: test.c  test.md
website/app/: layout.tsx
website/content/: index.mdx
website/content/docs/API/: call_stack_management.mdx  inline_logging.mdx
